# claude-codex-duet

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  command-reference.md  compatibility.md  getting-started.md  install.md  troubleshooting.md  tutorial.md  uninstall.md
docs/adr/: ADR-001-queue-backend.md  ADR-002-security-model.md  ADR-003-review-loop.md  ADR-004-secret-handling.md
examples/: hello-world-spec.md
scripts/: duet_cli.py
src/cc_duet/: __init__.py  cli.py
src/cc_duet/assets/project-command/: cc-duet.md
src/cc_duet/assets/runtime/: README.md
src/cc_duet/assets/runtime/agent-context/: CONSTRAINTS.md  REVIEW_CRITERIA.md  TASK_PROMPT_TEMPLATE.md
src/cc_duet/assets/runtime/hooks/: settings-snippet.json
src/cc_duet/assets/runtime/scripts/: codex_runner.py  create_task.py  mcp_server.py  queue_manager.py
src/cc_duet/assets/runtime/templates/: task.json
tests/: test_duet_cli.py  test_scaffold_runtime.py
