[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-codex-duet"
version = "0.4.0"
description = "Install and scaffold the cc-duet dual-agent workflow into arbitrary Git projects."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Aaron Tzeng", email = "Aaron.Tzeng@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/aarontzeng/claude-codex-duet"
Repository = "https://github.com/aarontzeng/claude-codex-duet"
Documentation = "https://github.com/aarontzeng/claude-codex-duet/tree/main/docs"
"Bug Tracker" = "https://github.com/aarontzeng/claude-codex-duet/issues"
Changelog = "https://github.com/aarontzeng/claude-codex-duet/blob/main/CHANGELOG.md"

[project.scripts]
cc-duet = "cc_duet.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cc_duet = ["assets/**/*", "assets/**/.gitkeep", "py.typed"]
